Add pause and speed-control to "stream" loading

--- a/html/controls/stream.html
+++ b/html/controls/stream.html
@@ -58,6 +58,11 @@
     <p>
       <button class="Start">Start</button>
       <button class="Stop">Stop</button>
+      <label class="Pause">Pause</label><input class="Pause" type="checkbox" />
+    </p>
+    <p>
+      <a class="Speed"></a>
+      <div class="Speed"></div>
     </p>
     <p class="Running">
       <a class="CurrentTime"></a> / <a class="EndTime"></a>
