Add /Carolina.png image for index page Update index.html and guide.html to use /Carolina.png instead of /images/teamlogo/Carolina.png

--- a/html/guide.html
+++ b/html/guide.html
@@ -5,7 +5,7 @@
 
 <a id="Top">
 <center>
-<img src="/images/teamlogo/Carolina.png" width="320" height="120" />
+<img src="/Carolina.png" width="320" height="120" />
 <h1>Carolina Rollergirls Browser-based Roller Derby Scoreboard</h1>
 </center>
 </a>
