--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@ $(function() {
 
 <a id="Top">
 <center>
-<img src="/images/teamlogo/Carolina.png" width="320" height="120" />
+<img src="/Carolina.png" width="320" height="120" />
 <h1>Carolina Rollergirls Browser-based Roller Derby Scoreboard</h1>
 <p>Version: <a id="version"></a></p>
 </center>
