Update stream from file interface controls

--- a/html/controls/stream.html
+++ b/html/controls/stream.html
@@ -58,15 +58,15 @@
     <p>
       <button class="Start">Start</button>
       <button class="Stop">Stop</button>
-      <label class="Pause">Pause</label><input class="Pause" type="checkbox" />
+      <label class="Pause Running">Pause</label><input class="Pause" type="checkbox" />
     </p>
-    <p>
-      <a class="Speed"></a>
-      <div class="Speed"></div>
+    <p class="Running">
+      Speed: <a class="Speed"></a>
+      <div class="Speed Running"></div>
     </p>
     <p class="Running">
       <a class="CurrentTime"></a> / <a class="EndTime"></a>
-      <div class="Progress"></div>
+      <div class="Progress Running"></div>
     </p>
     <p><a class="Error">Error: </a><a class="Status"></a></p>
   </div>
