--- a/html/index.html
+++ b/html/index.html
@@ -30,9 +30,9 @@ see <a href="guide.html">the guide</a>.
 <a href="views/scoreboard.html">Main Scoreboard</a><br/>
 <a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 <a href="controls/media_management.html">Media Management</a><br/>
-<a href="views/overlay.html">Video Feed Overlay Scoreboard (in development)</a><br/>
-<a href="controls/lineups.html">Team Lineup Control Panel (in development)</a><br/>
-<a href="controls/stream.html">Load/Save Scoreboard "Stream"</a><br/>
+<a href="views/overlay.html">Video Feed Overlay Scoreboard</a><br/>
+<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
+<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
 
 </body>
 
