--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@ see <a href="guide.html">the guide</a>.
 <a href="controls/media_management.html">Media Management</a><br/>
 <a href="views/overlay.html">Video Feed Overlay Scoreboard</a><br/>
 <a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
+<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 <a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
 
 </body>
