Add support for updating media package zip files from sf.net server

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -29,6 +29,7 @@
     <li><a href="#CustomHtml">Custom Page</a></li>
     <button class="Remove">Remove Type</button>
     <button class="Add">Add Unavailable Media</button>
+    <button class="Update">Update Media</button>
   </ul>
 </div>
 
@@ -85,6 +86,19 @@
   <p><a class="File">File:</a><input class="File" type="file" multiple/></p>
   <p><a class="Name">Name:</a><input class="Name" type="text" size="40"/></p>
   <p><a class="Status"></a></p>
+</div>
+
+<div class="UpdateMediaDialog DialogTemplate">
+  <p class="Template Package">
+    <a class="Name"></a>
+    <br/>
+    <a>Current Version: </a><a class="LocalVersion"></a>
+    <br/>
+    <a>Latest Version: </a><a class="LatestVersion"></a>
+    <br/>
+    <button class="Update"></button>
+  </p>
+  <p class="Results"><a class="Results"></a></p>
 </div>
 
 <div class="AddSpecificDialog DialogTemplate">
