Update index.html with instructions on how to update to latest media images.

--- a/html/index.html
+++ b/html/index.html
@@ -45,9 +45,11 @@ $(function() {
     <td>
       <p>
         <b>Important notice:</b><br/>
-        The scoreboard no longer includes any team logos or sponsor (ad) images.<br/>
+        The scoreboard no longer includes any team logos or sponsor (ad) images.
         The team logo images are now packaged separately.
-        <b>FIXME: implement some kind of easy one-click updating of the media packages</b>
+        To get the latest team logo images, go to the
+        <a href="controls/media_management.html">Media Management page</a>
+        and click on <i>Update Media</i> at the top-right of the page.
       </p>
 
       <p>
