add Roadmap link to the guide.html

--- a/html/guide.html
+++ b/html/guide.html
@@ -16,6 +16,12 @@
 visit the wiki</a> for all docs.
 </p>
 
+<h2>ScoreBoard Roadmap</h2>
+<p>The development roadmap, including bug/feature changelogs for each release, are at
+<a href="https://sourceforge.net/apps/mediawiki/derbyscoreboard/index.php?title=Roadmap">
+the wiki Roadmap page</a>.
+</p>
+
 <h2>Contacts</h2>
 <p>To contact the developers and/or get news about development, 
 <a href="http://lists.sourceforge.net/lists/listinfo/derbyscoreboard-devel">join the mailing list</a>.
