--- a/html/controls/twitter.html
+++ b/html/controls/twitter.html
@@ -22,7 +22,7 @@
 
 <body>
 
-<table class="Layout">
+<table id="Layout">
   <tbody>
     <tr>
       <td>
@@ -37,27 +37,42 @@
         </p>
         <p class="Error">Error: <a class="Error"></a></p>
 
-      </td>
-      <td>
-        <p class="DirectTweet" >
-          <input type="text" class="Tweet" />
-          <button class="Tweet">Tweet</button>
-        </p>
-
         <p class="AddConditionalTweet" >
           <input type="text" class="Condition" />
           <input type="text" class="Tweet" />
           <button class="Add" >Add</button>
         </p>
       </td>
+      <td>
+        <p class="DirectTweet" >
+          <input type="text" class="Tweet" />
+          <button class="Tweet">Tweet</button>
+        </p>
+      </td>
     </tr>
     <tr>
       <td>
-        <p class="StatusUpdates"></p>
+        <h3 class="Header">Conditional Tweet Configuration</h3>
+        <table id="ConditionalTweets">
+          <thead>
+            <tr>
+              <th class="Remove">Remove</th>
+              <th class="Condition">Condition</th>
+              <th class="Tweet">Tweet</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="ConditionalTweet Template">
+              <td class="Remove"><button class="Remove">Remove</button></td>
+              <td class="Condition"><span class="Condition"></span></td>
+              <td class="Tweet"><span class="Tweet"></span></td>
+            </tr>
+          </tbody>
+        </table>
       </td>
       <td>
-        <p class="ConditionalTweets">
-        </p>
+        <h3 class="Header">Tweets</h3>
+        <p class="StatusUpdates"></p>
       </td>
     </tr>
   </tbody>
