Update guide.html links to "upgraded" sf.net project pages

--- a/html/guide.html
+++ b/html/guide.html
@@ -12,13 +12,13 @@
 
 <h2>ScoreBoard Wiki</h2>
 <p>Documentation for the scoreboard has moved to a wiki.  Please 
-<a href="https://sourceforge.net/apps/mediawiki/derbyscoreboard/index.php?title=Main_Page">
+<a href="https://sourceforge.net/p/derbyscoreboard/wiki/">
 visit the wiki</a> for all docs.
 </p>
 
 <h2>ScoreBoard Roadmap</h2>
 <p>The development roadmap, including bug/feature changelogs for each release, are at
-<a href="https://sourceforge.net/apps/mediawiki/derbyscoreboard/index.php?title=Roadmap">
+<a href="https://sourceforge.net/p/derbyscoreboard/wiki/Roadmap/">
 the wiki Roadmap page</a>.
 </p>
 
@@ -29,9 +29,9 @@ You also can read the
 <a href="http://sourceforge.net/mailarchive/forum.php?forum_name=derbyscoreboard-devel">mailing list archive</a>.
 </p>
 <p>If you find any bugs, please report them on the mailing list and/or 
-<a href="http://sourceforge.net/tracker/?group_id=174565&atid=869732">open a bug</a>.
+<a href="https://sourceforge.net/p/derbyscoreboard/bugs/">open a bug</a>.
 If you would like to see any new features added, please send an email to the mailing list and/or 
-<a href="http://sourceforge.net/tracker/?group_id=174565&atid=869735">open a feature request</a>.
+<a href="https://sourceforge.net/p/derbyscoreboard/feature-requests/">open a feature request</a>.
 </p>
 
 <h2>Image Sizes</h2>
