Update lineups page with table border rounding and line background color changes

--- a/html/controls/lineups.html
+++ b/html/controls/lineups.html
@@ -25,12 +25,12 @@
 <div id="tableDiv">
   <table class="Template">
     <thead>
-      <tr>
+      <tr class="Team">
         <th class="Team" colspan="100%">
           <a class="Team"></a>
         </th>
       </tr>
-      <tr>
+      <tr class="Header">
         <th class="Name">Name</th>
         <th class="Number">#</th>
         <th class="Bench">Bench</th>
