--- a/html/controls/twitter.html
+++ b/html/controls/twitter.html
@@ -129,42 +129,7 @@
   </p>
   <p>
     Here is the current list of format specifiers that you can use:
-    <table>
-      <tr>
-        <td>
-          <ul>
-            <li>%t1n : Team 1 Name</li>
-            <li>%t1s : Team 1 Score</li>
-            <li>%t1t : Team 1 Timeouts</li>
-            <li>%t1l : Team 1 LeadJammer</li>
-            <li>%t1jn : Team 1 Jammer Name</li>
-            <li>%t1jN : Team 1 Jammer Number</li>
-            <li>%t1pn : Team 1 Pivot Name</li>
-            <li>%t1pN : Team 1 Pivot Number</li>
-            <li>%t1b1n : Team 1 Blocker1 Name</li>
-            <li>%t1b1N : Team 1 Blocker1 Number</li>
-            <li>%t1b2n : Team 1 Blocker2 Name</li>
-            <li>%t1b2N : Team 1 Blocker2 Number</li>
-            <li>%t1b3n : Team 1 Blocker3 Name</li>
-            <li>%t1b3N : Team 1 Blocker3 Number</li>
-            <li> For Team 2 use %t2*</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>%cpn : Clock Period Name</li>
-            <li>%cpN : Clock Period Number</li>
-            <li>%cpr : Clock Period Running</li>
-            <li>%cpts : Clock Period Time, in sec</li>
-            <li>%cptms : Clock Period Time, in min:sec</li>
-            <li> For Jam use %cj*</li>
-            <li> For Timeout use %ct*</li>
-            <li> For Lineup use %cl*</li>
-            <li> For Intermission use %ci*</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
+    <ul class="FormatSpecifierDescriptions"></ul>
   </p>
 </div>
 
