Add twitter condition/tweet realtime preview from input fields

--- a/html/controls/twitter.html
+++ b/html/controls/twitter.html
@@ -56,8 +56,17 @@
     <span class="Condition">
       <a class="Condition">Condition:</a><input type="text" size="40" class="Condition" />
     </span>
+    <br/>
+    <span class="Condition">
+      <a class="Condition Preview" ></a>
+    </span>
+    <br/>
     <span class="Tweet">
       <a class="Tweet">Tweet:</a><input type="text" size="40" class="Tweet" />
+    </span>
+    <br/>
+    <span class="Tweet">
+      <a class="Tweet Preview" ></a>
     </span>
     <br/>
     <button class="Add" >
