--- a/start.html
+++ b/start.html
@@ -57,7 +57,7 @@ p#NotStarted,p#Started { display: none; }
 <body>
 
 <p id="header" >
-<img src="html/images/teamlogo/Carolina.png" />
+<img src="html/Carolina.png" />
 <br/>
 <a>Carolina Rollergirls Browser-based Roller Derby Scoreboard</a>
 <hr/>
