update twitter_auth page to show error if there is no oauth_verifier, and forcibly clear AuthorizationURL to avoid looping

--- a/html/controls/twitter_auth.html
+++ b/html/controls/twitter_auth.html
@@ -21,6 +21,8 @@
 <center>
 <h2>Processing Twitter authorization, please wait...</h2>
 If you are not redirected, <a href="/controls/twitter.html">click here</a>
+<br/>
+<a id="error"></a>
 </center>
 
 </body>
