update media_map search functionality

--- a/html/controls/media_map.html
+++ b/html/controls/media_map.html
@@ -26,6 +26,9 @@
 <div id="mainDiv">
 
   <div id="controls">
+    <div class="SearchBox">
+      <input class="Search" type="text"/>
+    </div>
     <div class="LeagueName ControlBox">
       <a class="Label">League Name</a>
       <br/>
@@ -34,7 +37,7 @@
     <div class="TeamLogo ControlBox Image Template">
       <a class="Label">Team Logos</a>
       <br/>
-      <div class="ImageBox">
+      <div class="ImageBox Template">
         <div class="TeamLogoImage">
           <img class="TeamLogo" src=""/>
         </div>
