Update media map autocomplete functionality

--- a/html/controls/media_map.html
+++ b/html/controls/media_map.html
@@ -12,12 +12,18 @@
 
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 
-<script type="text/javascript" src="/javascript/scoreboard.js"></script>
+<script type="text/javascript" src="/external/jquery-ui/jquery-ui.js"></script>
+<link href="/external/jquery-ui/css/default/jquery-ui.css" type="text/css" rel="stylesheet"/>
+
+<script type="text/javascript" src="/external/jquery-plugins/string/jquery.string.js"></script>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4KW7YR4gL4kilBEyJfaj9vqhyQ90YWow&sensor=true"></script>
 <script type="text/javascript" src="/external/google-maps-utilities/infobox.js"></script>
 <script type="text/javascript" src="/external/google-maps-utilities/markerwithlabel.js"></script>
 <script type="text/javascript" src="/external/google-maps-utilities/markerclusterer.js"></script>
+
+<script type="text/javascript" src="media_map.js"></script>
+<link href="media_map.css" type="text/css" rel="stylesheet"/>
 
 </head>
 
