Add modernizr.js, update media_map page to check for browser suport of flexbox

--- a/html/controls/media_map.html
+++ b/html/controls/media_map.html
@@ -17,6 +17,8 @@
 
 <script type="text/javascript" src="/external/jquery-plugins/string/jquery.string.js"></script>
 
+<script type="text/javascript" src="/external/modernizr/modernizr.js"></script>
+
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4KW7YR4gL4kilBEyJfaj9vqhyQ90YWow&sensor=true"></script>
 <script type="text/javascript" src="/external/google-maps-utilities/infobox.js"></script>
 <script type="text/javascript" src="/external/google-maps-utilities/markerwithlabel.js"></script>
@@ -30,6 +32,11 @@
 <body>
 
 <div id="mainDiv">
+
+  <p id="FlexboxWarning">
+    Your browser does not support flexbox, or it is not enabled.<br/>
+    This display is in compatibility mode and some elements may not display correctly.
+  </p>
 
   <div id="controls">
     <div class="SearchBox">
